[gd_scene load_steps=14 format=3 uid="uid://boo7egubuj8lm"]

[ext_resource type="Theme" uid="uid://d018ofb37nf7u" path="res://assets/resources/themes/default.tres" id="1_xhbmd"]
[ext_resource type="Script" path="res://scripts/user_interface/custom_level_inspect.gd" id="2_hvtap"]
[ext_resource type="StyleBox" uid="uid://byr8amhnwal4k" path="res://assets/resources/themes/panel.tres" id="3_f7xua"]
[ext_resource type="Shader" path="res://scripts/shaders/Stars.gdshader" id="4_vh8y7"]
[ext_resource type="Texture2D" uid="uid://db21wornw3ypr" path="res://assets/ui/stars.png" id="5_ioms7"]
[ext_resource type="Texture2D" uid="uid://47j3qad85ny6" path="res://assets/ui/paste_icon.png" id="6_botlw"]
[ext_resource type="StyleBox" uid="uid://6j6cvsgplugk" path="res://assets/resources/themes/copy_button.tres" id="6_p0coo"]
[ext_resource type="Texture2D" uid="uid://bs8543o34whrb" path="res://assets/ui/trash_icon.png" id="7_gy07g"]
[ext_resource type="Texture2D" uid="uid://c7l47lki55rh1" path="res://assets/ui/editor_icon.png" id="8_805tn"]
[ext_resource type="Texture2D" uid="uid://cexydgocdclnk" path="res://assets/ui/play_icon.png" id="9_m2lq8"]
[ext_resource type="Theme" uid="uid://dujdfelccpvvo" path="res://assets/resources/themes/primary.tres" id="9_pmfwt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikv7t"]
bg_color = Color(0.525415, 0.683337, 0.522033, 0.454902)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wsgkt"]
shader = ExtResource("4_vh8y7")
shader_parameter/baseColor = Color(0.992157, 0.937255, 0.768627, 1)
shader_parameter/fillColor = Color(0.980392, 0.796078, 0.317647, 1)
shader_parameter/percentage = 0.0

[node name="LevelInspect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xhbmd")
script = ExtResource("2_hvtap")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ikv7t")

[node name="Panel" type="Panel" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_f7xua")

[node name="MarginContainer" type="MarginContainer" parent="Background/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="LevelName" type="Label" parent="Background/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_xhbmd")
text = "Level 01"
horizontal_alignment = 1

[node name="LevelScoreImg" type="TextureRect" parent="Background/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_wsgkt")
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("5_ioms7")
expand_mode = 3

[node name="BoxContainer" type="BoxContainer" parent="Background/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CopyBtn" type="Button" parent="Background/Panel/MarginContainer/VBoxContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_styles/hover = ExtResource("6_p0coo")
theme_override_styles/pressed = ExtResource("6_p0coo")
theme_override_styles/normal = ExtResource("6_p0coo")
icon = ExtResource("6_botlw")
alignment = 0
text_overrun_behavior = 3
icon_alignment = 2

[node name="Controls" type="HBoxContainer" parent="Background/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 55

[node name="DeleteBtn" type="Button" parent="Background/Panel/MarginContainer/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme = ExtResource("1_xhbmd")
theme_override_font_sizes/font_size = 100
icon = ExtResource("7_gy07g")

[node name="BuildBtn" type="Button" parent="Background/Panel/MarginContainer/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("1_xhbmd")
icon = ExtResource("8_805tn")

[node name="PlayBtn" type="Button" parent="Background/Panel/MarginContainer/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
theme = ExtResource("9_pmfwt")
icon = ExtResource("9_m2lq8")

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="pressed" from="Background/Panel/MarginContainer/VBoxContainer/BoxContainer/CopyBtn" to="." method="_on_copy_btn_pressed"]
[connection signal="pressed" from="Background/Panel/MarginContainer/VBoxContainer/Controls/DeleteBtn" to="." method="_on_delete_btn_pressed"]
[connection signal="pressed" from="Background/Panel/MarginContainer/VBoxContainer/Controls/BuildBtn" to="." method="_on_build_btn_pressed"]
[connection signal="pressed" from="Background/Panel/MarginContainer/VBoxContainer/Controls/PlayBtn" to="." method="_on_play_btn_pressed"]
